# NACad

./: .clang-format  .gitignore  CMakeLists.txt  README.md
shaders/: shader.fs  shader.vs  shaderLightSource.fs
src/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  ShaderProgram.cpp  ShaderProgram.h  Utils.cpp  Utils.h  camera.cpp  camera.h  main.cpp  stb_image.cpp
